# Orion

./: .env.example  .gitignore  ASSESSMENT.md  CHAT_GUIDE.md  INDEX.md  Makefile  QUICKSTART.md  README.md  orion_cli.py  pyproject.toml  verify.sh
forge_core/config/: schema.py
forge_core/errors/: types.py
forge_core/llm/: protocol.py
forge_core/observability/: logging.py
forge_core/policy/: framework.py
forge_core/tools/: protocol.py
src/application/approval/: approval_workflow.py
src/application/artifacts/: artifact_manager.py
src/application/context/: context_builder.py
src/application/coordinator/: conversation_coordinator.py
src/application/executor/: task_executor.py
src/application/intent/: intent_router.py
src/application/memory/: memory_manager.py
src/application/planner/: lightweight_planner.py
src/application/policy_engine/: policy_engine.py
src/application/session/: session_manager.py
src/bootstrap/: container.py  startup.py
src/domain/entities/: artifact.py  conversation.py  session.py  task.py  user_profile.py
src/domain/value_objects/: identifiers.py  intent.py  permission.py  risk.py  token_budget.py
src/infrastructure/llm/: anthropic_adapter.py  openai_adapter.py
src/infrastructure/storage/: sqlite_storage.py
src/infrastructure/tools/: builtin.py  tool_dispatch.py  tool_registry.py
src/interfaces/cli/: debug_cli.py
src/ports/inbound/: conversation_port.py
src/ports/outbound/: llm_port.py  policy_port.py  storage_port.py  tool_port.py
